fixed flex-wrap

--- a/css/master.css
+++ b/css/master.css
@@ -65,36 +65,37 @@ li {
 
 .photos {
   align-items: center;
-  align-content: center;
+  align-content: flex-start;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   height: 200px;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin: 2em;
   width: 200px;
 }
 
 .margins {
-  align-items: center;
-  align-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
   background-color: #DCDCDC;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  flex-flow: row;
   flex-wrap: wrap;
   height: 1900px;
-  justify-content: space-around;
-  width: 80%;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 .bigphoto {
   align-items: center;
   align-content: center;
-  background-color: black;
+  background-color: gray;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   height: auto;
   justify-content: center;
-  width: 60%;
+  width: auto;
 }
